RocketChat/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: rocket-chat-ingress
  namespace: rocketchat
spec:
  tls:
  - hosts:
    - chat.remisco.com
    secretName: rocket-chat--tls
  rules:
    - host: chat.remisco.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: rocketchat-rocketchat
                port:
                  number: 80
